# opengl-playground

./: CMakeLists.txt  conanfile.txt
app/: CMakeLists.txt  main.cc
include/: Camera.h  DirectionalLight.h  Light.h  Material.h  Mesh.h  Model.h  PointLight.h  ShaderProgram.h  SpotLight.h  Texture.h  Window.h  utils.h
src/: CMakeLists.txt  Camera.cc  DirectionalLight.cc  Light.cc  Material.cc  Mesh.cc  Model.cc  PointLight.cc  ShaderProgram.cc  SpotLight.cc  Texture.cc  Window.cc  lib.cc  utils.cc
src/shaders/: fragment.glsl  vertex.glsl
